--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "iNotebook - Your notebook on the cloud",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.1",
-    "mongoose": "^8.8.3"
+    "express-validator": "^7.2.0",
+    "mongoose": "^5.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
